# FEC_MCP

./: .gitignore  README.md  pyproject.toml
data/rulebooks/states/: README.md
demo/: README.md  app.py
src/fec_mcp/: __init__.py  openfec_client.py  rulebook_index.py  server.py
tests/: test_openfec_client.py  test_rulebook_index.py  test_server.py
