[project]
name = "fec-mcp"
version = "0.1.0"
description = "MCP server for Federal Election Commission rules, regulations, and data for PACs, party committees, and candidates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pypdf>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
demo = [
    "streamlit>=1.38",
    "anthropic>=0.40",
]

[project.scripts]
fec-mcp = "fec_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fec_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
